--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@cucumber/cucumber": "^10.8.0",
     "@eslint/js": "^9.7.0",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "allure-commandline": "^2.29.0",
     "allure-playwright": "^2.15.1",
     "eslint": "^8.57.0",
