--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "playwrightautomation",
-  "version": "1.0.0",
+  "name": "playwright-automation",
+  "version": "1.1.0",
   "description": "",
   "type": "module",
   "main": "index.js",
@@ -17,26 +17,26 @@
     "lint-fix": "eslint . --fix"
   },
   "keywords": [],
-  "author": "",
+  "author": "Victor Moraes",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@cucumber/cucumber": "^10.8.0",
-    "@eslint/js": "^9.7.0",
-    "@faker-js/faker": "^8.4.1",
-    "@playwright/test": "^1.44.1",
-    "@types/node": "^20.12.12",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@cucumber/cucumber": "^12.2.0",
+    "@eslint/js": "^9.38.0",
+    "@faker-js/faker": "^10.1.0",
+    "@playwright/test": "^1.56.1",
+    "@types/node": "^24.8.1",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
-    "allure-commandline": "^2.29.0",
-    "allure-playwright": "^2.15.1",
+    "allure-commandline": "^2.34.1",
+    "allure-playwright": "^3.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "exceljs": "^4.4.0",
-    "globals": "^15.8.0",
-    "husky": "^8.0.0",
-    "prettier-plugin-gherkin": "^2.2.1",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "prettier-plugin-gherkin": "^3.1.3",
     "typescript-eslint": "^7.16.0"
   }
 }
